dft (0.6.8-1) unstable; urgency=low

  * Add image filename timestamping
  * Add mkimage call after updating initrd
  * Improved firmware booting script with failover 

 -- William Bonnet <wbonnet@theitmakers.com>  Mon, 12 Mar 2018 09:24:00 +0100

dft (0.6.7-1) unstable; urgency=low

  * Bank switching is actiated in firmware
  * Initscript takes in account $ROOT variable
  * Firmware content is copied to both banks
  * Active/failover script has to be debugged
  * Add a few boards (Odroid C0, Odroid C1+). Not yet working

 -- William Bonnet <wbonnet@theitmakers.com>  Wed, 07 Mar 2018 09:14:00 +0100

dft (0.6.6-1) unstable; urgency=low

  * Add upgrade verification and deployment script
  * Add bank switching in uboot scripts

 -- William Bonnet <wbonnet@theitmakers.com>  Thu, 22 Feb 2018 13:54:00 +0100

dft (0.6.5-1) unstable; urgency=low

  * Add support for nanopi neo and cubieboard-3
  * Rename configuration to squashfs-configuratio in firmware.yml
  * Add several board support
  * Add Makefile for board support project (starting with orange pi 0)
  * Add firmware update archive generation

 -- William Bonnet <wbonnet@theitmakers.com>  Sun, 11 Feb 2018 18:00:00 +0100

dft (0.6.4-1) unstable; urgency=low

  * Fix image name
  * initrd size is generated in bootscript

 -- William Bonnet <wbonnet@theitmakers.com>  Thu, 04 Feb 2018 21:00:00 +0100

dft (0.6.3-1) unstable; urgency=low

  * Add support for sha224 sha384 and sha512 hash
  * Add bootscript support
  * Fix several problem during image generation
  * Add firmware content copy to image

 -- William Bonnet <wbonnet@theitmakers.com>  Thu, 01 Feb 2018 21:00:00 +0100

dft (0.6.2-1) unstable; urgency=low

  * Add additional binaries list generation when creating initiramfs

 -- William Bonnet <wbonnet@theitmakers.com>  Sun, 28 Jan 2018 21:54:00 +0100

dft (0.6.1-1) unstable; urgency=low

  * Remove debug info from stacking script

 -- William Bonnet <wbonnet@theitmakers.com>  Sat, 27 Jan 2018 13:55:00 +0100
