@@ -2,7 +2,8 @@ dft (0.6.8-1) unstable; urgency=low
 
   * Add image filename timestamping
   * Add mkimage call after updating initrd
-  * Improved firmware booting script with failover 
+  * Improved firmware booting script with failover
+  * Add bootflag cleaning script, called from /etc/rc.local
 
  -- William Bonnet <wbonnet@theitmakers.com>  Mon, 12 Mar 2018 09:24:00 +0100
 
